<resources>
    <string name="app_name">GuardiasCentro</string>
    <string name="guardias">Ver Guardias</string>
    <string name="aviso">Generar Aviso</string>
    <string name="volver">Volver</string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_login">Acceda al sistema</string>
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">La contraseña debe tener al menos 5 caracteres</string>
    <string name="login_failed">"Login fallido"</string>
    <string name="hint_Usuario">Usuario</string>
    <string name="enviarHoras">Confirmar</string>
    <string name="action_sign_in_short">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar_title">Seleccione el día</string>
    <string name="generarAviso">Generar aviso</string>
    <string name="verGuardias">Ver guardias</string>
    <string name="diaCompleto">Dia completo</string>
</resources>