<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.grupo04.views.FragmentHoras">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@drawable/miguelherrero"
        android:scaleType="centerCrop" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHoras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmarHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/enviarHoras" />

        <Button
            android:id="@+id/btnDiaCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/diaCompleto" />
        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/volver" />
    </LinearLayout>

</FrameLayout>